# exercises-analyzer

./: exercises.csv  main.py  meals.csv  project_plan.excalidraw
client/: package-lock.json  package.json  vite.config.ts
client/src/lib/action/: click_outside.ts
client/src/lib/components/: TextField.svelte
client/src/lib/components/Aside/: Aside.svelte  Link.svelte
client/src/routes/: +page.svelte
data/: exercises.csv
logic/: __init__.py  nutrition.py
presentation/: ascii_interface.py
server/: pyproject.toml
server/data/: meals.csv
server/logic/: training.py
server/presentation/: utils.py
